--- a/src/About.css
+++ b/src/About.css
@@ -1,7 +1,31 @@
 @media only screen and (max-width: 768px) {
   .about {
     flex: auto;
+    padding: 20px; /* Add padding to create space around the content */
+  }
 
+  .grid-container1 {
+    grid-template-columns: 100%;
+  }
+
+  .grid-item {
+    text-align: center;
+  }
+
+  img {
+    padding: 10px;
+    border: none;
+  }
+
+  .col-block.stats__col {
+    width: 100%;
+    border-right: none;
+    padding: 0;
+    margin-top: 20px; /* Add margin to separate the columns */
+  }
+
+  .count {
+    font-size: 40px;
   }
 }
 
@@ -16,9 +40,7 @@ body {
   line-height: 1.75;
   text-align: justify;
   flex: auto;
-
 }
-
 
 .head {
   max-width: 400px;
@@ -38,7 +60,6 @@ body {
   padding-top: 35px;
 }
 
-
 .grid-container1 {
   display: grid;
   grid-template-columns: 50% 50%;
@@ -46,13 +67,12 @@ body {
   padding-right: 20px;
   color: white;
   margin: 0px;
-
+  gap: 20px; /* Add gap between grid items */
 }
 
 .grid-item h3 {
   text-align: center;
   font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-
 }
 
 .grid-item {
@@ -61,7 +81,6 @@ body {
   font-size: 23px;
   font-weight: 500;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen', 'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue', sans-serif;
-
 }
 
 img {
@@ -72,8 +91,8 @@ img {
   border-left: 1px solid gray;
 }
 
-.col-block .stats__col {
-  width: 50%;
+.col-block.stats__col {
+  width: 90%;
 }
 
 .stats__col {
@@ -105,5 +124,4 @@ img {
   font-size: 1.5rem;
   line-height: 1.333;
   position: relative;
-
 }
